gcc/testsuite/gcc.dg/noncompile/920616-2.c
void f(void a,...){}		/* { dg-error "has incomplete type" } */
